--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 body {
     margin: 25px;
-    background-image: repeating-linear-gradient( rgb(0, 0, 0),rgb(52, 24, 103),rgb(173, 35, 186));
+    background-image: radial-gradient( rgb(0, 0, 0),rgb(52, 24, 103),rgb(173, 35, 186));
 }
 
 .pp {
