--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -7,4 +7,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.3s;
+}
+
+.album img:hover {
+    transform: scale(1.06) translate(10px);
+    transition: all 0.3s;
 }
